--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,16 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-    runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.jar{
+	manifest{
+		attributes["Main-Class"] = "me.dio.williandsl.Santander.Application"
+	}
 }
 
 tasks.named('test') {
